# path-smoothing-and-control_shareef

./: CMakeLISTS.txt  README.md  package.xml  setup.cfg  setup.py
isaacsim/: ten_x_assignment.py
isaacsim/urdf/: turtlebot3_burger.usd
isaacsim/usd/: 10x_project.usd
launch/: test.launch.py
tenx_assignment/launch/: test.launch.py
tenx_assignment/nodes/: path_publisher_node.py  path_smoother_node.py  tracking_controller_node.py  trajectory_controller_node.py  trajectory_generator_node.py  trajectory_generator_node_test.py  trajectory_to_path.py
tenx_assignment/utils/: b_spline_smoother.py  b_spline_smoother_test.py  centripetal_spline.py  test.py  test_time_param.py  time_param_test.py  time_parameterization.py  time_parameterization_centripetal.py
tenx_assignment/utils/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tenx_assignment/utils/log/: latest_build
